unpackaged/main/default/objects/Campaign_Case__c/fields/Specific_Brand__c.field-meta.xml
<CustomField>
    <fullName>Specific_Brand__c</fullName>
    <description>Used as a filter and determination for when only a specific brand is in question.  This is to help reporting and clean up any issues with validating qualifications.</description>
    <label>Specific Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Lists</valueSetName>
    </valueSet>
</CustomField>