unpackaged/main/default/objects/Campaign_Case__c/fields/Specific_Week__c.field-meta.xml
<CustomField>
    <fullName>Specific_Week__c</fullName>
    <description>Used for questions around the week of an occurrence or the number of weeks after or before occurrence for validation of criteria and information for cases.  Particularly used in pregnancy cases but other uses are available.</description>
    <inlineHelpText>Week of occurrence, week post occurence, week before occurence.</inlineHelpText>
    <label>Specific Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>