unpackaged/main/default/objects/Campaign_Case__c/fields/Start_Date_of_Second_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Second_Exposure__c</fullName>
    <description>This is for a secondary exposure scenario that is checked against. This tracks the date of first use or exposure of a product with the client. Should be used for determining time frames for SOL and liability criteria.</description>
    <inlineHelpText>Beginning of second product or experience they were exposed to related to the case.</inlineHelpText>
    <label>Start Date of Second Exposure</label>
    <type>Date</type>
</CustomField>