unpackaged/main/default/objects/Campaign_Case__c/fields/State_Death_Occurred__c.field-meta.xml
<CustomField>
    <fullName>State_Death_Occurred__c</fullName>
    <description>Used to determine the state the death occurred in at the time of death.</description>
    <inlineHelpText>The location in which the client died in.</inlineHelpText>
    <label>State Death Occurred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>