unpackaged/main/default/objects/Campaign_Case__c/fields/State_Diagnosis_Received__c.field-meta.xml
<CustomField>
    <fullName>State_Diagnosis_Received__c</fullName>
    <description>This is the state a diagnosis was received for an ailment. (D&amp;C needed question)</description>
    <inlineHelpText>State where an ailment was diagnosed.</inlineHelpText>
    <label>State Diagnosis Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>