unpackaged/main/default/objects/Campaign_Case__c/fields/State_Exposure_Occurred__c.field-meta.xml
<CustomField>
    <fullName>State_Exposure_Occurred__c</fullName>
    <description>Used to provide the location by state of where a product was used, or where exposure occurred to a client.</description>
    <inlineHelpText>State product was used in or client was exposed to case in.</inlineHelpText>
    <label>State Exposure Occurred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>