unpackaged/main/default/objects/Campaign_Case__c/fields/State_Medical_Care_Occurred__c.field-meta.xml
<CustomField>
    <fullName>State_Medical_Care_Occurred__c</fullName>
    <description>State that a client received medical care, where a prescription was given, or where doctors provided help</description>
    <inlineHelpText>Location where medical assistance or presciptions were provided.</inlineHelpText>
    <label>State Medical Care Occurred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>