unpackaged/main/default/objects/Campaign_Case__c/fields/State_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>State_of_Birth__c</fullName>
    <description>Used for litigation and PQC items based around the birth place of the client.</description>
    <inlineHelpText>State the client was born in.</inlineHelpText>
    <label>State of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>