unpackaged/main/default/objects/Campaign_Case__c/fields/State_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residency__c</fullName>
    <description>Used to show the current state of residency for cases with restrictions on litigation based on residency.  Also helps define what firms or partners can handle case based on territory.</description>
    <inlineHelpText>Current state the client resides in.</inlineHelpText>
    <label>State of Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>