unpackaged/main/default/objects/Campaign_Case__c/fields/State_of_Residency_During_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residency_During_Occurrence__c</fullName>
    <description>State in which the client was residing during the cases time frame. Establishes where a client was when an exposure, use, or incident occurred and is not related to current residency.</description>
    <inlineHelpText>State in which a client was residing in when an exposure, use, or incident occurred related to the case.</inlineHelpText>
    <label>State of Residency During Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>