unpackaged/main/default/objects/Campaign_Case__c/fields/Statute_of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Statute_of_Limitations__c</fullName>
    <description>Used to store answers about a cases&#39; qualification via Statute of Limitations (SOL) questions.  These can be different and have multiple options that need to be controlled.</description>
    <inlineHelpText>Statute of limitations verification via Questionnaire</inlineHelpText>
    <label>Statute of Limitations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Statute_of_Limitations</valueSetName>
    </valueSet>
</CustomField>