unpackaged/main/default/objects/Campaign_Case__c/fields/Treatment_Product_2__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Product_2__c</fullName>
    <description>Used to include the treatment or product used with the case. Help determine eligibility</description>
    <inlineHelpText>Treatment/Product used during the case</inlineHelpText>
    <label>Treatment/Product 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Treatment_or_Product</valueSetName>
    </valueSet>
</CustomField>