unpackaged/main/default/objects/Campaign_Case__c/fields/Trimester_Check_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Trimester_Check_Pregnancy__c</fullName>
    <description>Used to validate information around a pregnancy or the occurences of situations around the time frames of the trimester.  All cases with pregnancy leverage these items.</description>
    <inlineHelpText>Trimester related to occurence from case</inlineHelpText>
    <label>Trimester Check (Pregnancy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Trimester</fullName>
            </value>
            <value>
                <fullName>2nd Trimester</fullName>
            </value>
            <value>
                <fullName>3rd Trimester</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Only taken during 1st</fullName>
            </value>
            <value>
                <fullName>Was taken during 2nd and/or 3rd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>