unpackaged/main/default/objects/Campaign_Case__c/fields/Type_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Experience__c</fullName>
    <description>FLOW ONLY: This determines the type of experience a person had on a case.  Ex. if a person lived through a fire, we would want to know if they were Physically Injured, had property damage, or even emotional damage.</description>
    <inlineHelpText>What the client went through during the event.</inlineHelpText>
    <label>Type of Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>