unpackaged/main/default/objects/Campaign_Case__c/fields/Type_of_Exposure_2__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Exposure_2__c</fullName>
    <description>This is the type of exposure of the products in question for questionnaires. This consists of determining how much contact and the type of it they had with a product. Different than method of application.</description>
    <inlineHelpText>Exposure related detailed options for scoring and litigation</inlineHelpText>
    <label>Type of Exposure 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Exposure</valueSetName>
    </valueSet>
</CustomField>