unpackaged/main/default/objects/Campaign_Case__c/fields/Used_Prior_to_DX__c.field-meta.xml
<CustomField>
    <fullName>Used_Prior_to_DX__c</fullName>
    <description>Originally a place holder for hair relaxer, but it is a defining factor in many cases of knowing if there was use of product prior to DX.</description>
    <inlineHelpText>Qualifying question if a product was used prior to DX or not.</inlineHelpText>
    <label>Used Prior to DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>