unpackaged/main/default/objects/Campaign_Case__c/fields/Years_Used__c.field-meta.xml
<CustomField>
    <fullName>Years_Used__c</fullName>
    <description>Used to calculate the amount of exposure or time used by combining a time frame of use along with average hours or days spent with a product.</description>
    <inlineHelpText>Time length of use in years. Help measure liability measurements of exposure etc.</inlineHelpText>
    <label>Years Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>