unpackaged/main/default/objects/Campaign_Case__c/validationRules/Birthday_must_be_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthday_must_be_in_past</fullName>
    <active>false</active>
    <description>Stop users from placing the wrong birthday</description>
    <errorConditionFormula>Patient_Date_of_Birth__c  &gt;= TODAY()</errorConditionFormula>
    <errorMessage>You must enter a birthday in the past.</errorMessage>
</ValidationRule>