unpackaged/main/default/objects/Campaign_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_External_ID__c</columns>
    <columns>Intake__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>startsWith</operation>
        <value>Camp</value>
    </filters>
    <label>All</label>
</ListView>